Added zip file upload

--- a/src/main/resources/templates/control.html
+++ b/src/main/resources/templates/control.html
@@ -230,7 +230,7 @@
                         <p>Upload new assignments zip</p>
                         <div class="row">
                             <div class="col">
-                                <input type="file" class="form-control" placeholder="Assignments archive ..."/>
+                                <input type="file" name="file" class="form-control" placeholder="Assignments archive ..."/>
                             </div>
                             <div class="col">
                                 <button type="submit" class="btn btn-primary">Upload &amp; Scan</button>
