--- a/src/main/resources/templates/bootstrap.html
+++ b/src/main/resources/templates/bootstrap.html
@@ -51,7 +51,7 @@
     <div class="row justify-content-center">
         <div class="login-container">
             <form method="post" th:action="@{/bootstrap}" th:object="${form}">
-                <div class="d-flex flex-row-reverse">
+                <div class="d-flex justify-content-center">
                     <button type="submit" id="bootstrap" class="btn btn-primary ml-2">Bootstrap</button>
                 </div>
             </form>
