--- a/src/main/resources/templates/play.html
+++ b/src/main/resources/templates/play.html
@@ -229,7 +229,7 @@
                 <p>Do you want to continue?</p>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-ds-dismiss="modal">Cancel</button>
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
                 <button id="submit" class="btn w-50 btn-danger" th:disabled="${assignment.isCompleted()}">SUBMIT
                 </button>
             </div>
