--- a/src/main/resources/templates/play.html
+++ b/src/main/resources/templates/play.html
@@ -32,6 +32,8 @@
                 <h1>No active assignment</h1>
                 <p>At the moment there is no assignment active. Once an assignment is started you will automatically be
                     shown the assignment. (If not press F5 to reload the page.)</p>
+                    
+        	// todo: JFALLMODE if assignment active but no clock for this team, then press 'play' to continue
             </div>
 
             <div id="content" th:if="${assignmentActive}"
