Added queue metrics

--- a/src/main/resources/templates/control.html
+++ b/src/main/resources/templates/control.html
@@ -58,6 +58,10 @@
                             class="fa fa-gamepad pr-1"></span>Feedback</a>
                 </div>
             </div>
+            <div>
+                <div class="mt-5" id="stats">
+                </div>
+            </div>
         </div>
 
         <!-- session tabs -->
