Added metrics, improved stresstest, improved jms workers

--- a/src/main/resources/templates/control.html
+++ b/src/main/resources/templates/control.html
@@ -59,6 +59,10 @@
                 </div>
             </div>
             <div>
+                <div class="mt-5" id="ostats">
+                </div>
+            </div>
+            <div>
                 <div class="mt-5" id="stats">
                 </div>
             </div>
