--- a/src/main/resources/templates/play.html
+++ b/src/main/resources/templates/play.html
@@ -188,7 +188,9 @@
                    target="_blank"><span class="fa fa-trophy pe-1"></span>Rankings</a>
             </div>
         </div>
-        <div class="mr-auto p-2">&nbsp;
+        <div class="mr-auto p-2">
+            <a class="btn btn-danger text-white"
+               th:href="@{/logout}"><span class="fa fa-sign-out-alt pe-1"></span>Logout</a>
         </div>
         <div class="ms-auto pe-2 align-self-center" id="status"></div>
     </div>
